@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: util.c,v 1.42.2.13 2007/01/24 18:33:29 martinea Exp $
+ * $Id: util.c,v 1.42.2.14 2007/05/23 12:07:39 martinea Exp $
  */
 
 #include "amanda.h"
@@ -2716,7 +2716,7 @@ int copy_file(
 	save_errno = errno;
 	quoted = quote_string(src);
 	*errmsg = vstralloc("Can't open file ", quoted, " for reading: %s",
-			    strerror(save_errno));
+			    strerror(save_errno), NULL);
 	amfree(quoted);
 	return -1;
     }
@@ -2725,7 +2725,7 @@ int copy_file(
 	save_errno = errno;
 	quoted = quote_string(dst);
 	*errmsg = vstralloc("Can't open file ", quoted, " for writting: %s",
-			    strerror(save_errno));
+			    strerror(save_errno), NULL);
 	amfree(quoted);
 	close(infd);
 	return -1;
@@ -2736,7 +2736,7 @@ int copy_file(
 	    save_errno = errno;
 	    quoted = quote_string(dst);
 	    *errmsg = vstralloc("Error writing to \"", quoted, "\":",
-				strerror(save_errno));
+				strerror(save_errno), NULL);
 	    amfree(quoted);
 	    close(infd);
 	    close(outfd);
@@ -2748,7 +2748,7 @@ int copy_file(
 	save_errno = errno;
 	quoted = quote_string(src);
 	*errmsg = vstralloc("Error reading from \"", quoted, "\":",
-			    strerror(save_errno));
+			    strerror(save_errno), NULL);
 	amfree(quoted);
 	close(infd);
 	close(outfd);
