@@ -1,4 +1,7 @@
 2007-05-23  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/util.c: Fix missing NULL in vstralloc call.
+
+2007-05-23  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/driver.c: Check dumper->down.
 	* server-src/dumper.c (sendbackup_response): Only call
 	  security_close_connection if pkt != NULL.
